--- a/quiz.css
+++ b/quiz.css
@@ -3,7 +3,6 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
-    width: 100vw;
     background-color: rgb(15, 49, 112);
     overflow-x: hidden;
 }
@@ -13,6 +12,7 @@ body{
     background-color: aliceblue;
     position: absolute;
     font-size: x-large;
+    border-radius: 10px;
 
 }
 .supmit{
@@ -25,15 +25,23 @@ body{
     border: none;
     cursor: pointer;
     font-size:large;
+    border-radius: 10px;
     
 }
 h2{
     margin:32px 20px;
-    font-size: xx-large;
+    font-size: x-large;
 }
+
+.quiz{
+    padding: 8px;
+    font-size: x-large;
+    height: 80px;
+}
+
 .answer{
     padding-left: 40px;
-    padding-top: 10px;
+    padding-top: 8px;
     height: 60px;
     cursor: pointer;
 
@@ -44,7 +52,11 @@ h2{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    height: 100%;
+}
 
+.h1{
+    font-size: xx-large;
 }
 .correct{
     color: green;
