--- a/quiz.css
+++ b/quiz.css
@@ -37,11 +37,12 @@ h2{
     padding: 8px;
     font-size: x-large;
     height: 80px;
+    margin-bottom: 50px;
 }
 
 .answer{
     padding-left: 40px;
-    padding-top: 8px;
+    padding-top: 6px;
     height: 60px;
     cursor: pointer;
 
