--- a/quiz.css
+++ b/quiz.css
@@ -1,51 +1,52 @@
 body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
     background-color: rgb(15, 49, 112);
-    overflow-x: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
+
 .container{
-    height: 50%;
-    width: 50%;
     background-color: aliceblue;
-    position: absolute;
     font-size: x-large;
     border-radius: 10px;
+    width: 50%;
+    height: 60%;
 
-}
-.supmit{
-    width: 100%;
-    background-color: blueviolet;
-    color: aliceblue;
-    height: 50px;
-    position: absolute;
-    bottom: 0;
-    border: none;
-    cursor: pointer;
-    font-size:large;
-    border-radius: 10px;
+.play{
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    flex-direction: column;
+    height: 100%;
+    .quiz{
+        font-size: x-large;
+        padding: 10px;
+    }
     
-}
-h2{
-    margin:32px 20px;
-    font-size: x-large;
+    .answer{
+        cursor: pointer;
+        padding: 10px;
+    }
+    
+    .supmit{
+        background-color: blueviolet;
+        color: aliceblue;   
+        cursor: pointer;
+        font-size:large;
+        border-radius: 10px;
+        height: 40px;
+        border: none;
+        width: 100%;
+    }
 }
 
-.quiz{
-    padding: 8px;
-    font-size: x-large;
-    height: 80px;
-    margin-bottom: 50px;
 }
 
-.answer{
-    padding-left: 40px;
-    padding-top: 6px;
-    height: 50px;
-    cursor: pointer;
 
+.big{
+    display: none;
 }
 
 .result{
@@ -53,45 +54,55 @@ h2{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100%;
+    width: 50%;
+    height: 60%;
+    margin: auto;
+    .h1{
+        font-size: xx-large;
+    }
+    .correct{
+        color: green;
+        font-size: x-large;
+    }
+    .wrong{
+        color: red;
+       
+    }
+    .score{
+        color: blue;
+        
+    }
+
+    .button{
+        width: 200px;
+        height: 40px;
+        background-color: blueviolet;
+        color: white;
+        border-radius: 10px;
+        border: none;
+        cursor: pointer;
+        font-size: x-large;
+    }
+
 }
 
-.h1{
-    font-size: xx-large;
-}
-.correct{
-    color: green;
-    font-size: x-large;
-}
-.wrong{
-    color: red;
-   
-}
-.score{
-    color: blue;
-    
-}
-
-.button{
-    width: 200px;
-    height: 40px;
-    background-color: blueviolet;
-    color: white;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    font-size: x-large;
-}
-.big{
-    display: none;
-}
-
-
-@media (max-width:1800px){
+@media screen and (max-width: 600px) {
     .container{
-        height: 90%;
+        width: 100%;
+        height: 80%;
+    }
+    .result{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1200px) and (min-width: 600px) {
+    .container{
+        width: 80%;
+        height: 60%;
+    }
+    .result{
         width: 80%;
     }
-   
+    
 }
-
